--- a/css/style.scss
+++ b/css/style.scss
@@ -16,12 +16,11 @@ $dark-cornflower-blue: #1a3e75ff;
 * {
     margin: 0;
     padding: 0;
-    border: black solid 0.5px;
 }
 
 body {
     background-color: $vivid-sky-blue;
-    font-family: 'Newsreader', serif;
+    font-family: 'Bebas Neue', cursive;
 }
 
 li {
@@ -51,9 +50,6 @@ a {
     background-color: $queen-pink;
     color: white;
     transform: translateY(-3px);
-    a{
-        color: white;
-    }
   }
 
 // header styling with media query for adaptive logo
@@ -73,7 +69,7 @@ a {
     }
 }
 
-.navstandard, .navmobile {
+.navstandard {
     ul {
         margin-top: 4%;
         width: 100%;
@@ -81,7 +77,7 @@ a {
     }
 }
 
-@media screen and (min-width: 481px) and (max-width: 768px) {
+@media screen and (min-width: 481px) and (max-width: 767px) {
     .logo {
         h1{
             height: 70px; //used px to keep the logo design constant
@@ -89,18 +85,28 @@ a {
     }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1000px){
+@media screen and (min-width: 768px) and (max-width: 991px){
     .logo {
         h1{
             height: 160px; //used px to keep the logo design constant
         }
     }
+    #footlogo {
+        h1 {
+            height: 70px;
+        }
+    }
 }
 
-@media screen and (min-width: 1001px) {
+@media screen and (min-width: 992px) {
     .logo {
         h1{
             height: 70px; //used px to keep the logo design constant
+        }
+    }
+    #footlogo {
+        h1 {
+            height: 80px;
         }
     }
 }
@@ -109,12 +115,11 @@ a {
 
 section {
     div {
-        height: 220px;
+        height: 300px;
     }
 }
 
 .swiper-container {
-    width: 100%;
     margin-bottom: 30px;
 }
 
@@ -122,13 +127,14 @@ section {
 .swiper-slide {
       position: relative;
       overflow: hidden;
+      border-radius: 5px;
 }
 
 .swiper-slide img {
-    width: 100%;
+    width: 800px;
     position: absolute;
-    top: -30%;
-    left: 0%;
+    top: -40%;
+    left: -80%;
 }
 
 .swiper-button-prev, .swiper-button-next {
@@ -138,14 +144,61 @@ section {
     top: 5%;
 }
 
+@media screen and (min-width: 481px) and (max-width: 767px) {
+    section {
+        div {
+            height: 300px;
+        }
+    }
+
+    .swiper-slide img {
+        width: 700px;
+        top: -40%;
+        left: -20%;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px){
+    section {
+        div {
+            height: 440px;
+        }
+    }
+
+    .swiper-slide img {
+        width: 1100px;
+        top: -30%;
+        left: -40%;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    section {
+        div {
+            width: 100%;
+            height: 440px;
+        }
+    }
+    .swiper-slide img {
+        width: 100%;
+        top: -20%;
+        left: 0%;
+    }
+}
+
 //main styling
 
-.cards {
-    width: 100%;
+.card {
+    overflow: hidden;
+    img {
+        width: 150%;
+        position: relative;
+        top: 0%;
+        left: -20%;
+    }
+    p {
+        margin-top: 0;
+    }
 }
 
-//footer styling
 
-address {
-    margin-bottom: 70px;
-}
